{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 33,
  "lineage": "c4f13a68-9498-20d7-b512-7ec55f23a498",
  "resources": [
    {
      "module": "module.ecs_app",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:089719647189:loadbalancer/app/fargate-demo-alb/3b9007837af310e3",
            "arn_suffix": "app/fargate-demo-alb/3b9007837af310e3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "fargate-demo-alb-506792976.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:089719647189:loadbalancer/app/fargate-demo-alb/3b9007837af310e3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fargate-demo-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b211dc51adb7ade0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a7413a55f299fa35"
              },
              {
                "subnet_id": "subnet-0b20085d64af8622d"
              }
            ],
            "subnets": [
              "subnet-0a7413a55f299fa35",
              "subnet-0b20085d64af8622d"
            ],
            "vpc_id": "vpc-02858f28f90469ca9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ecs_app.aws_security_group.alb",
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_app",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:089719647189:listener/app/fargate-demo-alb/3b9007837af310e3/6120d5e3a90d5691",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:089719647189:targetgroup/fargate-demo-tg/c5d0e6567ded91d2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:089719647189:listener/app/fargate-demo-alb/3b9007837af310e3/6120d5e3a90d5691",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:089719647189:loadbalancer/app/fargate-demo-alb/3b9007837af310e3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_app.aws_lb.this",
            "module.ecs_app.aws_lb_target_group.this",
            "module.ecs_app.aws_security_group.alb",
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_app",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:089719647189:targetgroup/fargate-demo-tg/c5d0e6567ded91d2",
            "arn_suffix": "targetgroup/fargate-demo-tg/c5d0e6567ded91d2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:089719647189:targetgroup/fargate-demo-tg/c5d0e6567ded91d2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fargate-demo-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02858f28f90469ca9"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:089719647189:security-group/sg-0b211dc51adb7ade0",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b211dc51adb7ade0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fargate-demo-alb-sg",
            "name_prefix": "",
            "owner_id": "089719647189",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02858f28f90469ca9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:089719647189:security-group/sg-0ef34e6a88c710655",
            "description": "Service security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef34e6a88c710655",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b211dc51adb7ade0"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fargate-demo-svc-sg",
            "name_prefix": "",
            "owner_id": "089719647189",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02858f28f90469ca9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_app.aws_security_group.alb",
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:089719647189:network-acl/acl-0dc33ab34823dd65e",
            "default_network_acl_id": "acl-0dc33ab34823dd65e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0dc33ab34823dd65e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "089719647189",
            "subnet_ids": [
              "subnet-00f5c6051880f5413",
              "subnet-0a7413a55f299fa35"
            ],
            "tags": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-default"
            },
            "tags_all": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-default"
            },
            "vpc_id": "vpc-02858f28f90469ca9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:089719647189:route-table/rtb-0e3bc379b4d74abc7",
            "default_route_table_id": "rtb-0e3bc379b4d74abc7",
            "id": "rtb-0e3bc379b4d74abc7",
            "owner_id": "089719647189",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-default"
            },
            "tags_all": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-02858f28f90469ca9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:089719647189:security-group/sg-0f86c9a29a2652825",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f86c9a29a2652825",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "089719647189",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-default"
            },
            "tags_all": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-default"
            },
            "vpc_id": "vpc-02858f28f90469ca9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c775fe9a68217ee",
            "arn": "arn:aws:ec2:us-east-1:089719647189:elastic-ip/eipalloc-04c775fe9a68217ee",
            "domain": "vpc",
            "id": "eipalloc-04c775fe9a68217ee",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-194-169-137.compute-1.amazonaws.com",
            "public_ip": "34.194.169.137",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-us-east-1a"
            },
            "tags_all": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:089719647189:internet-gateway/igw-037ae548f72a680ee",
            "id": "igw-037ae548f72a680ee",
            "owner_id": "089719647189",
            "tags": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev"
            },
            "tags_all": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev"
            },
            "vpc_id": "vpc-02858f28f90469ca9"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c775fe9a68217ee",
            "association_id": "eipassoc-01901cd1a01ff394f",
            "connectivity_type": "public",
            "id": "nat-0f2a578ddbb914bb8",
            "network_interface_id": "eni-00de88e2fe119ee1f",
            "private_ip": "10.0.139.215",
            "public_ip": "34.194.169.137",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b20085d64af8622d",
            "tags": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-us-east-1a"
            },
            "tags_all": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-us-east-1a"
            }
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d3ab1dfaa4361aec1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f2a578ddbb914bb8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d3ab1dfaa4361aec",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-037ae548f72a680ee",
            "id": "r-rtb-07f681b26036443591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07f681b2603644359",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:089719647189:route-table/rtb-0d3ab1dfaa4361aec",
            "id": "rtb-0d3ab1dfaa4361aec",
            "owner_id": "089719647189",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-private"
            },
            "tags_all": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-02858f28f90469ca9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:089719647189:route-table/rtb-07f681b2603644359",
            "id": "rtb-07f681b2603644359",
            "owner_id": "089719647189",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-public"
            },
            "tags_all": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02858f28f90469ca9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd00a9b13fd8fe31",
            "route_table_id": "rtb-0d3ab1dfaa4361aec",
            "subnet_id": "subnet-0ec8d76ba43a26e0f"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0113f540d3fb8484a",
            "route_table_id": "rtb-0d3ab1dfaa4361aec",
            "subnet_id": "subnet-00f5c6051880f5413"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e4b56b55cae239f",
            "route_table_id": "rtb-07f681b2603644359",
            "subnet_id": "subnet-0b20085d64af8622d"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cade1efb2aee2173",
            "route_table_id": "rtb-07f681b2603644359",
            "subnet_id": "subnet-0a7413a55f299fa35"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:089719647189:subnet/subnet-0ec8d76ba43a26e0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec8d76ba43a26e0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "089719647189",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02858f28f90469ca9"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:089719647189:subnet/subnet-00f5c6051880f5413",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f5c6051880f5413",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "089719647189",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02858f28f90469ca9"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:089719647189:subnet/subnet-0b20085d64af8622d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b20085d64af8622d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "089719647189",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02858f28f90469ca9"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:089719647189:subnet/subnet-0a7413a55f299fa35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7413a55f299fa35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "089719647189",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02858f28f90469ca9"
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.available",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:089719647189:vpc/vpc-02858f28f90469ca9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dc33ab34823dd65e",
            "default_route_table_id": "rtb-0e3bc379b4d74abc7",
            "default_security_group_id": "sg-0f86c9a29a2652825",
            "dhcp_options_id": "dopt-e0287d98",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02858f28f90469ca9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e3bc379b4d74abc7",
            "owner_id": "089719647189",
            "tags": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev"
            },
            "tags_all": {
              "Component": "network",
              "Environment": "dev",
              "Name": "fargate-demo-vpc-dev"
            }
          }
        }
      ]
    }
  ]
}